--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ body{
   margin-left: 300px;
   padding-top: 20px;
 }
-#box
+.box
 {
   width: 500px;
   height: 50px;
@@ -68,7 +68,7 @@ body{
   border-color: #D3D3D3;
 
 }
-#loading-suggestions
+.loading-suggestions
 {
   width: 500px;
   height: 50px;
